--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
-        "select2": "^4.1.0-rc.0"
+        "select2": "^4.1.0-rc.0",
+        "summernote": "^0.8.20"
     }
 }
